# zkregex

./: README.md
code/zkregex/: LICENSE-APACHE  README.md
code/zkregex/acc/: Cargo.lock.fast  Cargo.lock.slow  Cargo.toml  btl.dump  disable.sh  dump.txt  gitpush.sh  prf2.txt  prf2all.txt  tcp.txt
code/zkregex/acc/batchscripts/: .gitignore  all_2.txt  all_full.txt  batch_prove.sh  batch_prove.template  batch_prove2.sh  create_jobs.py  javamain.params.txt  nohup.out
code/zkregex/acc/dependency/ripp/dh_commitments/: Cargo.toml
code/zkregex/acc/dependency/ripp/dh_commitments/src/pedersen/: mod.rs
code/zkregex/acc/dependency/ripp/inner_products/: Cargo.toml
code/zkregex/acc/dependency/ripp/inner_products/src/: lib.rs
code/zkregex/acc/dependency/ripp/ip_proofs/: Cargo.toml
code/zkregex/acc/dependency/ripp/ip_proofs/src/: lib.rs
code/zkregex/acc/dependency/ripp/ip_proofs/src/tipa/: mod.rs  structured_scalar_message.rs
code/zkregex/acc/scripts/: PROCESS_ALL.py  aggregate.sh  compile.sh  debug.py  debug.sh  pingpong.sh  profile.sh  prover.sh  publisher.sh  run.sh  single_profile.sh  test_nonzk_sigma_proof.sh  zk_prove.sh
code/zkregex/acc/src/: lib.rs  main.rs  update.sh
code/zkregex/dependency/rsmpi/: LICENSE-APACHE
code/zkregex/dizk/dizk/: .gitignore  compile.sh  pom.xml
code/zkregex/jars/: README  collect.sh
code/zkregex/jsnark/JsnarkCircuitBuilder/: .gitignore  TOREMOVE_Utils_java  TOR_Utils.java  config.properties  debug.sh  dump.txt  old_run.sh  run.sh  sage_server.py  start_sage_server.sh  system_run.sh  test.sh
code/zkregex/jsnark/libsnark/: .gitignore  AUTHORS  README.md
code/zkregex/main/: .gitignore  README  config.properties  fft_test.dump  gitpush.sh  pom.xml  quick_test.dump  to_del.dump
code/zkregex/main/poseidon_script/: Bls381Constants.txt  clean.sh  poseidonHash.sage  scripts.txt  template.txt
code/zkregex/main/run_dir/: test001.sage
code/zkregex/main/scripts/: batch_preprocess.sh  compile.sh  debug.sh  deploy.sh  getjar.py  paperdata.sh  prover.sh  publisher.sh  test_preprocess.py  test_preprocess_cmd.txt
code/zkregex/nfa/ac/: .gitignore  gitpush.sh  update.sh
code/zkregex/nfa/automaton-1.12/: COPYING  ChangeLog  README.md  build.xml  pom.xml  run.sh
data/: REPORT_ALL.txt  elf_list.txt
data/AggregateLog/: VERIFY_PERFRF.txt
data/Fig7_DistributedSystemPerfData/: run.sh
data/Fig7_DistributedSystemPerfData/output/: fig_poly.eps
data/Fig7_DistributedSystemPerfData/plot_scripts/: fig_poly.gnuplot
data/Fig7_DistributedSystemPerfData/raw_data/: fft_hpc256.dat.old
data/Fig7_DistributedSystemPerfData/run_dumps/: dis_fft.dump  div_02_23_23.dump  div_hpc256_01022023.dump  fft_bn254.dump  fft_hpc256.dump  fft_hpc256_01062023.dump  fft_hpc256_12212022.dump  gcd_4_32_256.dump  groth16_27_128_256.dump  groth16_full_singlethread.dump  mul_hpc256.dump  mul_hpc256_12222022.dump  mul_hpc256_12262022.dump  poly.dump  poly_1server.dump  poly_op_bigdata.dump  serial_gcd.dump
data/Fig7_DistributedSystemPerfData/template_scripts/: gendata.py
data/ZkProofs_Logs/: job_15_10.txt.report  job_15_10_1.txt.report  job_15_10_2.txt.report  job_15_10_3.txt.report  job_15_10_4.txt.report  job_15_15.txt.report  job_15_15_1.txt.report  job_15_20.txt.report  job_15_30.txt.report  job_15_300.txt.report  job_15_40.txt.report  job_16_10.txt.report  job_16_15.txt.report  job_16_20.txt.report  job_16_30.txt.report  job_16_300.txt.report  job_16_40.txt.report  job_16_50.txt.report  job_17_10.txt.report  job_17_15.txt.report  job_17_20.txt.report  job_17_30.txt.report  job_17_300.txt.report  job_17_40.txt.report  job_17_50.txt.report  job_18_10.txt.report  job_18_15.txt.report  job_18_15_1.txt.report  job_18_20.txt.report  job_18_30.txt.report  job_18_300.txt.report  job_18_40.txt.report  job_18_50.txt.report  job_19_10.txt.report  job_19_15.txt.report  job_19_20.txt.report  job_19_30.txt.report  job_19_300.txt.report  job_19_40.txt.report  job_19_50.txt.report  (+16 more)
(+2941 files in other folders)
