[package]
name = "ark-dh-commitments"
version = "0.3.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Psi Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-dh-commitments/"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[dependencies]
#ark-ff = "0.3"
#ark-ec = "0.3"
#ark-serialize = { version = "0.3", features = [ "derive" ] }
#ark-std = "0.3"
ark-inner-products = { path = "../inner_products" }
ark-ec = {version = "0.3", path = "../../algebra/ec"}
ark-std = { version = "0.3.0"}
ark-serialize= {version="0.3.0", path="../../algebra/serialize", features=["derive"]}
ark-ff = { version = "0.3", path = "../../algebra/ff"}

[dev-dependencies]
ark-bls12-381 = { version = "0.3", features = [ "curve" ] }
ark-ed-on-bls12-381 = "0.3"

[features]
default = [ "parallel" ]
parallel = [ "ark-ff/parallel", "ark-ec/parallel" ]
