[package]
name = "ark-inner-products"
version = "0.3.0"
authors = [
    "Benedikt Bünz",
    "Mary Maller",
    "Pratyush Mishra",
    "Nirvan Tyagi",
    "Psi Vesely",
]
edition = "2018"
homepage = "https://github.com/arkworks-rs/ripp"
repository = "https://github.com/arkworks-rs/ripp"
documentation = "https://docs.rs/ark-inner-products/"
#edition = "2021"
#rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[dependencies]
#ark-ff = "0.3"
#ark-ec = "0.3"
#ark-std = "0.3"
#ark-serialize = { version = "0.3", features = [ "derive" ] }
rayon = { version = "1", optional = true }
ark-ec = {version = "0.3", path = "../../algebra/ec"}
ark-std = { version = "0.3.0"}
ark-ff = { version = "0.3", path = "../../algebra/ff"}
ark-serialize= {version="0.3.0", path="../../algebra/serialize", features=["derive"]}

[features]
default = [ "parallel" ]
parallel = [ "rayon", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]
